--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.17.5",
     "@types/node-hid": "^1.3.1",
+    "@types/node-osc": "^6.0.1",
     "cross-env": "^7.0.3",
     "electron": "^25.5.0",
     "electron-builder": "^24.6.3",
@@ -67,6 +68,7 @@
     "koa-router": "^12.0.0",
     "meow": "^9.0.0",
     "node-hid": "npm:@julusian/hid@2.5.0-3",
+    "node-osc": "^8.1.0",
     "semver": "^7.5.4",
     "tslib": "^2.6.1",
     "usb": "^2.9.0"
