--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
     "@sofie-automation/code-standard-preset": "~2.4.7",
+    "@types/convict": "^6.1.3",
     "@types/electron-prompt": "^1.6.1",
     "@types/koa": "^2.13.8",
     "@types/koa-router": "^7.4.4",
@@ -51,18 +52,18 @@
   },
   "dependencies": {
     "@elgato-stream-deck/node": "^5.7.3",
-    "@julusian/image-rs": "^0.1.3",
+    "@julusian/image-rs": "^0.2.0",
     "@julusian/jpeg-turbo": "^2.1.0",
     "@julusian/skia-canvas": "^1.0.4",
     "@loupedeck/node": "^1.0.0",
     "@xencelabs-quick-keys/node": "^0.4.0",
+    "convict": "^6.2.4",
     "electron-about-window": "^1.15.2",
     "electron-prompt": "^1.7.0",
     "electron-store": "^8.1.0",
     "eventemitter3": "^4.0.7",
     "exit-hook": "^2.2.1",
     "infinitton-idisplay": "^1.1.2",
-    "js-ini": "^1.6.0",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
