--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
     "@sofie-automation/code-standard-preset": "~2.4.7",
+    "@types/async-exit-hook": "^2.0.0",
     "@types/convict": "^6.1.3",
     "@types/electron-prompt": "^1.6.1",
     "@types/koa": "^2.13.8",
@@ -64,6 +65,7 @@
     "eventemitter3": "^4.0.7",
     "exit-hook": "^2.2.1",
     "infinitton-idisplay": "^1.1.2",
+    "ip-assignment": "^1.0.3",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
